--- a/404.html
+++ b/404.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="http://example.orgcss/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="http://example.orgcss/poole.css">
+  <link type="text/css" rel="stylesheet" href="http://example.orgcss/syntax.css">
+  <link type="text/css" rel="stylesheet" href="http://example.orgcss/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,26 +31,25 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://the-bao.github.io/"><h1>BLOG OF RTY</h1></a>
+      <a href="http://example.org"><h1>BLOG OF RTY</h1></a>
       <p class="lead">
-      An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.
+       小宝的初级博客。 
       </p>
     </div>
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://the-bao.github.io/">Home</a> </li>
-        
+        <li><a href="/"> 首页 </a></li><li><a href="/tags"> 分类 </a></li>
       </ul>
     </nav>
 
-    <p>&copy; 2022. All rights reserved. </p>
+    <p>Copyright (c) 2022,the-bao</p>
   </div>
 </aside>
 
     <main class="content container">
     <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://the-bao.github.io/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://example.org">Head back home</a> to try finding it again.</p>
     </main>
 
     
