--- a/404.html
+++ b/404.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="http://example.orgcss/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="http://example.orgcss/poole.css">
-  <link type="text/css" rel="stylesheet" href="http://example.orgcss/syntax.css">
-  <link type="text/css" rel="stylesheet" href="http://example.orgcss/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,7 +31,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://example.org"><h1>BLOG OF RTY</h1></a>
+      <a href="https://the-bao.github.io"><h1>BLOG OF RTY</h1></a>
       <p class="lead">
        小宝的初级博客。 
       </p>
@@ -49,7 +49,7 @@
 
     <main class="content container">
     <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://example.org">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://the-bao.github.io">Head back home</a> to try finding it again.</p>
     </main>
 
     
