--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="小宝的初级博客。" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://the-bao.github.iocss/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://the-bao.github.io/css/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
